--- a/index.html
+++ b/index.html
@@ -3,4 +3,4 @@
 kawakami 
 </title>
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
-<\html>
+</html>
