--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <html>
-<h1>
-kawakami 
-</h1>
+<img src="Kawa.jpeg" alt="Kawakami">
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
 </html>
