--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
+<body style="background-color:black;">
 <img src="Kawa.jpeg" alt="Kawakami">
 <p align="center">
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
 </p>
+</body>
 </html>
