--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
 </p>
 
-<a href="https://app.uniswap.org/#/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap text</a>
+<a href="https://app.uniswap.org/#/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap color = white align=center</a>
 </body>
 </html>
