--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ a:hover, a:active {
 <p align="center">
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
 </p>
-<div align="center" style="font-size=200px">
+<div align="center" style="font-size=14">
 <a href="https://app.uniswap.org/#/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap</a>
 </div>
 </body>
