--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ a:hover, a:active {
 </style>
 <html>
 <body style="background-color:black;">
-<img src="Kawa1.jpeg" alt="Kawakami">
+<img src="Kawa.jpeg" alt="Kawakami">
 <p align="center">
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
 </p>
