--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ a:hover, a:active {
   background-color: red;
 }
 </style>
+<title>
+Kawakami
+</title>
 <html>
 <body style="background-color:black;">
 <img src="Kawa.jpeg" alt="Kawakami">
