--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@ Kawakami
 <body style="background-color:black;">
 <div align="center" style="font-size=20">
 <img src="Kawa.jpeg" alt="Kawakami">
+<iframe class="gas-cards-iframe" src="https://dune.com/embeds/1303416/2233204/6e7e6dd7-1b5c-48e7-a332-f97d0002c4fc" style="width:100%;height:500px;display:block"></iframe>
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
+
+
 <a href="https://app.uniswap.org/#/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap</a>
 </div>
 </body>
