--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@ a:hover, a:active {
 <title>
 Kawakami
 </title>
-<iframe class="gas-cards-iframe" src="https://dune.com/embeds/1303416/2233212/a9a9f09e-54b6-43f5-a009-6b2d0fd67896" style="width:100%;height:500px;display:block"></iframe>
 <body style="background-color:black;">
 <div align="center" style="font-size=20">
 <img src="Kawa.jpeg" alt="Kawakami">
-
+<iframe class="gas-cards-iframe" src="https://dune.com/embeds/1303416/2233212/a9a9f09e-54b6-43f5-a009-6b2d0fd67896" style="width:100%;height:500px;background:white;display:block"></iframe>
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
 
 
