--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ Kawakami
 <div align="center" style="font-size=20">
 <img src="Kawa.jpeg" alt="Kawakami">
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
-<iframe class="gas-cards-iframe" src="https://dune.com/embeds/1303416/2233212/a9a9f09e-54b6-43f5-a009-6b2d0fd67896" style="width:100%;height:500px;background:white;display:block"></iframe>
-<iframe class="gas-cards-iframe" src="https://dune.com/embeds/920650/1610561/3748a9b8-cc3b-4d7c-8419-dd3a40dfeb02" style="width:100%;height:500px;background:white;display:block"></iframe>
+<iframe  src="https://dune.com/embeds/1303416/2233212/a9a9f09e-54b6-43f5-a009-6b2d0fd67896" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
+<iframe  src="https://dune.com/embeds/920650/1610561/3748a9b8-cc3b-4d7c-8419-dd3a40dfeb02" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
 
 
 <a href="https://app.uniswap.org/#/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap</a>
