--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Kawakami
 </title>
 <body style="background-color:black;">
 <div align="center" style="font-size=20">
-<img src="Kawa.jpeg" alt="Kawakami">
+<img src="Kawa.jpeg" alt="Kawakami" style="width:100%">
 
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
 <iframe  src="https://dune.com/embeds/1303416/2233212/a9a9f09e-54b6-43f5-a009-6b2d0fd67896" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
