--- a/index.html
+++ b/index.html
@@ -26,11 +26,8 @@ Kawakami
 <iframe  src="https://dune.com/embeds/1292248/2214625/6171d7e0-109a-44fb-a963-b78688550ad4" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
 <iframe  src="https://dune.com/embeds/920650/1610561/3748a9b8-cc3b-4d7c-8419-dd3a40dfeb02" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
 
-<div id="framearea" style="  width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 1;">
-    <iframe id="scoreboard" scrolling="no" src="https://dune.com/embeds/920650/1610561/3748a9b8-cc3b-4d7c-8419-dd3a40dfeb02" style="width: 100%; height: 100%;"></iframe>
-  </div>
 
-<a href="https://app.uniswap.org/#/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap</a>
+<a href="https://app.uniswap.org/#u/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap</a>
 </div>
 </body>
 </html>
