--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Kawakami
 <img src="Kawa.jpeg" alt="Kawakami" style="width:100%">
 
 <iframe class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe" style="width:100%;height:500px;display:block"></iframe>
-<iframe  src="https://dune.com/embeds/1303416/2233212/a9a9f09e-54b6-43f5-a009-6b2d0fd67896" sandbox="allow-pointer-lock" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
+<iframe  src="https://dune.com/embeds/1303416/2233212/a9a9f09e-54b6-43f5-a009-6b2d0fd67896"  scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
 <iframe  src="https://dune.com/embeds/1292358/2214669/c8584ae7-76b4-470c-859d-a4f5a4eac251" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
 <iframe  src="https://dune.com/embeds/1292248/2214625/6171d7e0-109a-44fb-a963-b78688550ad4" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
 <iframe  src="https://dune.com/embeds/920650/1610561/3748a9b8-cc3b-4d7c-8419-dd3a40dfeb02" scrolling="no" style="width:100%;height:500px;background:white;display:block"></iframe>
