--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@ Kawakami
 
 <a href="https://app.uniswap.org/#u/swap?outputCurrency=0x5552e5a89a70cb2ef5adbbc45a6be442fe7160ec&chain=mainnet">Buy Kawa on Uniswap</a>
 </div>
+
+
+<div class="container">
+  <iframe class="lockframe" src="https://dune.com/embeds/920650/1610561/3748a9b8-cc3b-4d7c-8419-dd3a40dfeb02"></iframe>
+</div>
+div.container { background: transparent; }
+iframe.lockframe { z-index: -2; }
+
+
 </body>
 </html>
