--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@ Kawakami
 <div class="container">
   <iframe class="lockframe" src="https://dune.com/embeds/920650/1610561/3748a9b8-cc3b-4d7c-8419-dd3a40dfeb02"></iframe>
 </div>
-div.container { background: transparent; }
-iframe.lockframe { z-index: -2; }
+
 
 
 </body>
 </html>
+
+div.container { background: transparent; }
+.lockframeee { z-index: -2; }
