--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Kawakami
 
 
 
-<div style="position: absolute; center: 0px; top: 0px; border: solid 2px #555; width:100%; height:500px;">
+<div align="center">
 <div style="overflow: hidden; margin-top: -100px; margin-left: 0px;">
 
 <iframe src="https://dune.com/embeds/1292358/2214669/c8584ae7-76b4-470c-859d-a4f5a4eac251" scrolling="no" style="height: 490px; border: 0px none; width: 619px; margin-top: -60px; margin-left: -24px; ">
