--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ Kawakami
 <div align="center">
 <div style="overflow: hidden; margin-top: -100px; margin-left: 0px;">
 
-<iframe src="https://dune.com/embeds/1292358/2214669/c8584ae7-76b4-470c-859d-a4f5a4eac251" scrolling="no" style="height: 490px; border: 0px none; width: 619px; margin-top: -60px; margin-left: -24px; ">
+<iframe src="https://dune.com/embeds/1292358/2214669/c8584ae7-76b4-470c-859d-a4f5a4eac251" scrolling="no" style="width:100%;height:500px;background:white;display:block ">
 </iframe>
 </div>
 </div>
