--- a/index.html
+++ b/index.html
@@ -1,3 +1,17 @@
+<head>
+  <title>Your Title</title>
+  <meta property="og:title" content="Your Title">
+  <meta name="twitter:title" content="Your Title">
+  
+  <meta name="description" content="Your Description">
+  <meta property="og:description" content="Your Description">
+  <meta name="twitter:description" content="Your Description">
+  
+  <meta property="og:image" content="Kawa.jpeg">
+  <meta name="twitter:image" content="img_url">
+</head>
+
+
 <html>
 <style>
 a:link, a:visited {
