--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
   <title>Your Title</title>
-  <meta property="og:title" content="Your Title">
+  <meta property="og:title" content="kawakami info">
   <meta name="twitter:title" content="Your Title">
   
   <meta name="description" content="Your Description">
-  <meta property="og:description" content="Your Description">
+  <meta property="og:description" content="Get gas ⛽️ info and kawa charts">
   <meta name="twitter:description" content="Your Description">
   
   <meta property="og:image" content="Kawa.jpeg">
