--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Your Title</title>
+  <title>Kawakami info</title>
   <meta property="og:title" content="kawakami info">
   <meta name="twitter:title" content="Your Title">
   
