--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
   <title>Kawakami info</title>
   <meta property="og:title" content="kawakami info">
-  <meta name="twitter:title" content="Your Title">
+  <meta name="twitter:title" content="Kawwkami info">
   
   <meta name="description" content="Your Description">
   <meta property="og:description" content="Get gas ⛽️ info and kawa charts">
