--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   
   <meta property="og:image" content="Kawa.jpeg">
   <meta name="twitter:image" content="img_url">
+  <meta property="og:iframe" content="class="gas-cards-iframe" src="https://www.blocknative.com/gas-iframe">
 </head>
 
 
