--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta property="og:title" content="kawakami info">
   <meta name="twitter:title" content="Kawwkami info">
   
-  <meta name="description" content="Your Description">
+  <meta name="description" content="Kawakami portal">
   <meta property="og:description" content="Get gas ⛽️ info and kawa charts">
   <meta name="twitter:description" content="Your Description">
   
