--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <head>
   <title>Kawakami info</title>
-  <meta property="og:title" content="kawakami info">
+  <meta property="og:title" content="kawakami info"/>
   
   
-  <meta name="description" content="Kawakami portal">
-  <meta property="og:description" content="Get gas ⛽️ info and kawa charts">
+  <meta name="description" content="Kawakami portal"/>
+  <meta property="og:description" content="Get gas ⛽️ info and kawa charts"/>
   
   
-  <meta property="og:image" content="Kawa.jpeg">
-  <meta name="twitter:image" content="img_url">
-  <meta property="og:url" content="https://kawaportal.github.io/Kawakami/">
+  <meta property="og:image" content="Kawa.jpeg"/>
+  <meta name="twitter:image" content="img_url"/>
+  <meta property="og:url" content="https://kawaportal.github.io/Kawakami/"/>
 </head>
 
 
