--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@ Kawakami
       const fullURL = baseURL + userParam;
 
       // Display the concatenated URL
-      alert("The concatenated URL is: " + fullURL);
+      //alert("The concatenated URL is: " + fullURL);
 
-      // Optionally, redirect to the URL
-      // window.location.href = fullURL;
+      //Optionally, redirect to the URL
+      window.location.href = fullURL;
     }
   </script>
 </body>
