--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
   <title>Kawakami info</title>
   <meta property="og:title" content="kawakami info"/>
@@ -52,7 +53,7 @@ Kawakami
 <body>
   <h1>Enter wallet address</h1>
   <input type="text" id="userInput">
-  <button onclick="concatenateURL()">Concatenate</button>
+  <button onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
@@ -79,6 +80,7 @@ Kawakami
 </div>
 
 </body>
+</html>
 </html>
 
 
