--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 
-<html>
+
 <style>
 a:link, a:visited {
   background-color: #f44336;
@@ -53,7 +53,7 @@ Kawakami
 <body>
   <h1>Enter wallet address</h1>
   <input type="text" id="userInput">
-  <button onclick="concatenateURL()">Check staked kawakami nfts</button>
+  <button onclick="concatenateURL()">Check x staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
@@ -77,10 +77,9 @@ Kawakami
 </html>
 
 
-</div>
+
 
 </body>
-</html>
 </html>
 
 
