--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <meta property="og:url" content="https://kawaportal.github.io/Kawakami/"/>
 </head>
 
-  <h1>Enter wallet address</h1>
+  <h1>Enter wallet address</h1>or
   <input type="text" id="userInput">
-  <button onclick="concatenateURL()">Check x staked kawakami nfts</button>
+  <button onclick="concatenateURL()">Check y staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
