--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta name="twitter:image" content="img_url"/>
   <meta property="og:url" content="https://kawaportal.github.io/Kawakami/"/>
 </head>
-
+<body>
   <h1>Enter wallet address</h1>or
   <input type="text" id="userInput">
   <button onclick="concatenateURL()">Check y staked kawakami nfts</button>
