--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <h1>Enter wallet address</h1>or
   <input type="text" id="userInput">
-  <button onclick="concatenateURL()">Check y staked kawakami nfts</button>
+  <button onclick="concatenateURL()">Check z staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
