--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
   <meta property="og:url" content="https://kawaportal.github.io/Kawakami/"/>
 </head>
 <body>
-  <h1>Enter wallet address</h1>or
+  <h1>Enter wallet address</h1>
   <input type="text" id="userInput">
-  <button onclick="concatenateURL()">Check z staked kawakami nfts</button>
+  <button onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
@@ -42,11 +42,6 @@
 </body>
 </html>
 
-
-
-
-</body>
-</html>
 
 
 
