--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <html>
 <head>
 <title>Kawakami info</title>
-<h1>test</h1>
+<h1 center font=30>Kawakami staked nfts for a given wallet
+</h1>
 </head>
 <body>
   <h1>Enter wallet address</h1>
