--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Kawakami info</title>
-<h1 center font=30>Kawakami staked nfts for a given wallet
-</h1>
+<title>
+  Kawakami staked nfts for a given wallet
+</title>
+  <style>
+    h1 {
+      text-align: center;
+      font-size: 40px;
+    }
+  </style>
+
 </head>
 <body>
   <h1>Enter wallet address</h1>
