--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 </head>
 <body>
-  <h1>Enter wallet address</h1>
-  <input type="text" id="userInput">
+  Enter wallet address
+  <input type="text" size=20 id="userInput">
   <button onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
