--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   Enter wallet address
-  <input type="text" size=40 id="userInput">
+  <input type="text" font=40 id="userInput">
   <button onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
