--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 </head>
 <body>
-  <font> size=40 Enter wallet address </font>
+  <font size=30> Enter wallet address </font>
   <input type="text" font=40 id="userInput">
-  <button font=40 onclick="concatenateURL()">Check staked kawakami nfts</button>
+  <button font_size=40 onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
