--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <font size=30> Enter wallet address </font>
   <input type="text" font=40 id="userInput">
-  <button font_size=40 onclick="concatenateURL()">Check staked kawakami nfts</button>
+  <button style="font-family: arial; font-size= 20px;"  onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
