--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 </head>
 <body>
-  <font size=30> Enter wallet address </font>
-  <input type="text" font-size=40 id="userInput">
+  <font size=20> Enter wallet address </font>
+  <input type="text" style="font-family:arial; font-size= 20px;"  id="userInput">
   <button style="font-family: arial; font-size= 20px;"  onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
