--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <font size=20> Enter wallet address </font>
   <input type="text" style="font-family:arial; font-size= 20px;"  id="userInput">
-  <button style="font-family: arial; font-size= 20px;"  onclick="concatenateURL()">Check staked kawakami nfts</button>
+  <button style="font-family: Arial; font-size= 20px;"  onclick="concatenateURL()">Check staked kawakami nfts</button>
 
   <script>
     function concatenateURL() {
